terraform/aws/aws-eks/__forgerock/ig-v1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ig
    app.kubernetes.io/component: ig
    app.kubernetes.io/instance: ig
    app.kubernetes.io/name: ig
    app.kubernetes.io/part-of: forgerock
    tier: middle
  name: ig
spec:
  ipFamilies:
  - IPv6
  ipFamilyPolicy: SingleStack
  ports:
  - name: ig
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: ig
    app.kubernetes.io/component: ig
    app.kubernetes.io/instance: ig
    app.kubernetes.io/name: ig
    app.kubernetes.io/part-of: forgerock
    tier: middle
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ig
    app.kubernetes.io/component: ig
    app.kubernetes.io/instance: ig
    app.kubernetes.io/name: ig
    app.kubernetes.io/part-of: forgerock
    tier: middle
  name: ig
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ig
      app.kubernetes.io/component: ig
      app.kubernetes.io/instance: ig
      app.kubernetes.io/name: ig
      app.kubernetes.io/part-of: forgerock
      tier: middle
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      creationTimestamp: null
      labels:
        app: ig
        app.kubernetes.io/component: ig
        app.kubernetes.io/instance: ig
        app.kubernetes.io/name: ig
        app.kubernetes.io/part-of: forgerock
        tier: middle
    spec:
      containers:
      - env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: MY_POD_IP
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.podIP
        image: devforge1/ig:2023.4.0.1
        imagePullPolicy: Always
        livenessProbe:
          periodSeconds: 30
          exec:
            command:
            - sh
            - -c
            - curl -v -k -g -6 http://localhost:8080/
          successThreshold: 1
          timeoutSeconds: 10
        name: ig
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          exec:
            command:
            - sh
            - -c
            - curl -v -k -g -6 http://localhost:8080/
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsGroup: 0
        runAsUser: 11111
      terminationGracePeriodSeconds: 30
      hostNetwork: true
